# pyridis-benchmark

./: .gitignore  Cargo.toml  README.md  justfile  requirements.txt
.github/workflows/: mdbook.yml
docs/: book.toml
docs/src/: SUMMARY.md  pyridis-benchmark.md
draw/: pyproject.toml
draw/src/draw/: __init__.py
message/: pyproject.toml
message/src/message/: __init__.py
nodes/: sink.py  source.py
src/: lib.rs
