[project]
name = "draw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Enzo Le Van", email = "dev@enzo-le-van.fr" }]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pyqt6>=6.9.0",
]

[project.scripts]
draw = "draw:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
