[project]
name = "message"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Enzo Le Van", email = "dev@enzo-le-van.fr" }]
requires-python = ">=3.11"
dependencies = ["pyridis-message==0.3.5"]

[project.scripts]
message = "message:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
